--- a/RESTful api/WebApi/WebApi/WebApi.csproj
+++ b/RESTful api/WebApi/WebApi/WebApi.csproj
@@ -202,7 +202,9 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
-    <Content Include="Data\Customers.xml" />
+    <Content Include="Data\Customers.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
